GPC/tests/examples/fail/mixNumbers.gpc

int x = 5;
double y = 5.0;
double z = y + x;

int GPRM::Test::mixNumbers() {
    return x;
}
